@@ -167,17 +167,6 @@ var catalogue_sidebar_inner = document.querySelector('.catalogue-sidebar');
 
 </script>
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-41509591-1', 'europa.eu');
-  ga('send', 'pageview');
-
-</script>
-
 <!-- Matomo -->
 <script type="text/javascript">
   var _paq = _paq || [];
