@@ -3,6 +3,8 @@ Changelog
 
 1.3.dev0 - (unreleased)
 -----------------------
+* Task: Removed google analytics code for bise
+  [iulianpetchesi #100969]
 
 1.2 - (2018-10-26)
 ------------------
@@ -51,4 +53,3 @@ Changelog
 - Improve styling of country checkout actions
   [tiberich]
 - Initial release
-
